gen/ee/edio/garmin/parser/MonkeyCParser.java
// This is a generated file. Not intended for manual editing.
package ee.edio.garmin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ee.edio.garmin.psi.MonkeyCTypes.*;
import static ee.edio.garmin.parser.MonkeyCParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MonkeyCParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ADDITIVE_EXPRESSION) {
      r = additiveExpression(b, 0);
    }
    else if (t == AND_EXPRESSION) {
      r = andExpression(b, 0);
    }
    else if (t == ARGUMENTS) {
      r = arguments(b, 0);
    }
    else if (t == ARRAY_CREATOR) {
      r = arrayCreator(b, 0);
    }
    else if (t == ARRAY_INITIALIZER) {
      r = arrayInitializer(b, 0);
    }
    else if (t == ASSIGNMENT_OPERATOR) {
      r = assignmentOperator(b, 0);
    }
    else if (t == BLOCK) {
      r = block(b, 0);
    }
    else if (t == BLOCK_STATEMENT) {
      r = blockStatement(b, 0);
    }
    else if (t == CATCH_CLAUSE) {
      r = catchClause(b, 0);
    }
    else if (t == CATCH_PARAMETER) {
      r = catchParameter(b, 0);
    }
    else if (t == CATCHES) {
      r = catches(b, 0);
    }
    else if (t == CLASS_BODY) {
      r = classBody(b, 0);
    }
    else if (t == CLASS_BODY_DECLARATION) {
      r = classBodyDeclaration(b, 0);
    }
    else if (t == CLASS_CREATOR_REST) {
      r = classCreatorRest(b, 0);
    }
    else if (t == CLASS_DECLARATION) {
      r = classDeclaration(b, 0);
    }
    else if (t == CLASS_OR_INTERFACE_TYPE) {
      r = classOrInterfaceType(b, 0);
    }
    else if (t == CONDITIONAL_AND_EXPRESSION) {
      r = conditionalAndExpression(b, 0);
    }
    else if (t == CONDITIONAL_EXPRESSION) {
      r = conditionalExpression(b, 0);
    }
    else if (t == CONDITIONAL_OR_EXPRESSION) {
      r = conditionalOrExpression(b, 0);
    }
    else if (t == CREATED_NAME) {
      r = createdName(b, 0);
    }
    else if (t == CREATOR) {
      r = creator(b, 0);
    }
    else if (t == ENUM_BODY) {
      r = enumBody(b, 0);
    }
    else if (t == ENUM_BODY_DECLARATIONS) {
      r = enumBodyDeclarations(b, 0);
    }
    else if (t == ENUM_CONSTANT) {
      r = enumConstant(b, 0);
    }
    else if (t == ENUM_CONSTANTS) {
      r = enumConstants(b, 0);
    }
    else if (t == ENUM_DECLARATION) {
      r = enumDeclaration(b, 0);
    }
    else if (t == EQUALITY_EXPRESSION) {
      r = equalityExpression(b, 0);
    }
    else if (t == EXCLUSIVE_OR_EXPRESSION) {
      r = exclusiveOrExpression(b, 0);
    }
    else if (t == EXPLICIT_CONSTRUCTOR_INVOCATION) {
      r = explicitConstructorInvocation(b, 0);
    }
    else if (t == EXPRESSION) {
      r = expression(b, 0);
    }
    else if (t == EXPRESSION_LIST) {
      r = expressionList(b, 0);
    }
    else if (t == FIELD_DECLARATION) {
      r = fieldDeclaration(b, 0);
    }
    else if (t == FOR_INIT) {
      r = forInit(b, 0);
    }
    else if (t == FOR_STATEMENT) {
      r = forStatement(b, 0);
    }
    else if (t == FORMAL_PARAMETER_DECLS) {
      r = formalParameterDecls(b, 0);
    }
    else if (t == FORMAL_PARAMETERS) {
      r = formalParameters(b, 0);
    }
    else if (t == FUNCTION_DECLARATION) {
      r = functionDeclaration(b, 0);
    }
    else if (t == IDENTIFIER_SUFFIX) {
      r = identifierSuffix(b, 0);
    }
    else if (t == INCLUSIVE_OR_EXPRESSION) {
      r = inclusiveOrExpression(b, 0);
    }
    else if (t == INSTANCE_OF_EXPRESSION) {
      r = instanceOfExpression(b, 0);
    }
    else if (t == KEY_VALUE_INITIALIZER) {
      r = keyValueInitializer(b, 0);
    }
    else if (t == LITERAL) {
      r = literal(b, 0);
    }
    else if (t == LOCAL_VARIABLE_DECLARATION) {
      r = localVariableDeclaration(b, 0);
    }
    else if (t == LOCAL_VARIABLE_DECLARATION_STATEMENT) {
      r = localVariableDeclarationStatement(b, 0);
    }
    else if (t == MEMBER_DECL) {
      r = memberDecl(b, 0);
    }
    else if (t == MODIFIERS) {
      r = modifiers(b, 0);
    }
    else if (t == MULTIPLICATIVE_EXPRESSION) {
      r = multiplicativeExpression(b, 0);
    }
    else if (t == NEW_ARRAY_INITIALIZER) {
      r = newArrayInitializer(b, 0);
    }
    else if (t == NEW_DICTIONARY_INITIALIZER) {
      r = newDictionaryInitializer(b, 0);
    }
    else if (t == NORMAL_CLASS_DECLARATION) {
      r = normalClassDeclaration(b, 0);
    }
    else if (t == NORMAL_PARAMETER_DECL) {
      r = normalParameterDecl(b, 0);
    }
    else if (t == PAR_EXPRESSION) {
      r = parExpression(b, 0);
    }
    else if (t == PRIMARY) {
      r = primary(b, 0);
    }
    else if (t == QUALIFIED_NAME) {
      r = qualifiedName(b, 0);
    }
    else if (t == QUALIFIED_NAME_LIST) {
      r = qualifiedNameList(b, 0);
    }
    else if (t == RELATIONAL_EXPRESSION) {
      r = relationalExpression(b, 0);
    }
    else if (t == RELATIONAL_OP) {
      r = relationalOp(b, 0);
    }
    else if (t == SELECTOR) {
      r = selector(b, 0);
    }
    else if (t == SHIFT_EXPRESSION) {
      r = shiftExpression(b, 0);
    }
    else if (t == SHIFT_OP) {
      r = shiftOp(b, 0);
    }
    else if (t == STATEMENT) {
      r = statement(b, 0);
    }
    else if (t == SWITCH_BLOCK_STATEMENT_GROUP) {
      r = switchBlockStatementGroup(b, 0);
    }
    else if (t == SWITCH_BLOCK_STATEMENT_GROUPS) {
      r = switchBlockStatementGroups(b, 0);
    }
    else if (t == SWITCH_LABEL) {
      r = switchLabel(b, 0);
    }
    else if (t == SYMBOL) {
      r = symbol(b, 0);
    }
    else if (t == TRY_STATEMENT) {
      r = tryStatement(b, 0);
    }
    else if (t == TYPE) {
      r = type(b, 0);
    }
    else if (t == TYPE_DECLARATION) {
      r = typeDeclaration(b, 0);
    }
    else if (t == UNARY_EXPRESSION) {
      r = unaryExpression(b, 0);
    }
    else if (t == UNARY_EXPRESSION_NOT_PLUS_MINUS) {
      r = unaryExpressionNotPlusMinus(b, 0);
    }
    else if (t == USING_DECLARATION) {
      r = usingDeclaration(b, 0);
    }
    else if (t == VARIABLE_DECLARATOR) {
      r = variableDeclarator(b, 0);
    }
    else if (t == VARIABLE_INITIALIZER) {
      r = variableInitializer(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return monkeyCFile(b, l + 1);
  }

  /* ********************************************************** */
  // multiplicativeExpression ((PLUS | SUB) multiplicativeExpression)*
  public static boolean additiveExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<additive expression>");
    r = multiplicativeExpression(b, l + 1);
    r = r && additiveExpression_1(b, l + 1);
    exit_section_(b, l, m, ADDITIVE_EXPRESSION, r, false, null);
    return r;
  }

  // ((PLUS | SUB) multiplicativeExpression)*
  private static boolean additiveExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!additiveExpression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additiveExpression_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (PLUS | SUB) multiplicativeExpression
  private static boolean additiveExpression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additiveExpression_1_0_0(b, l + 1);
    r = r && multiplicativeExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // PLUS | SUB
  private static boolean additiveExpression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additiveExpression_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, SUB);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // equalityExpression (AMP equalityExpression)*
  public static boolean andExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<and expression>");
    r = equalityExpression(b, l + 1);
    r = r && andExpression_1(b, l + 1);
    exit_section_(b, l, m, AND_EXPRESSION, r, false, null);
    return r;
  }

  // (AMP equalityExpression)*
  private static boolean andExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andExpression_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!andExpression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "andExpression_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // AMP equalityExpression
  private static boolean andExpression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andExpression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AMP);
    r = r && equalityExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPAREN (expressionList)? RPAREN
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && arguments_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ARGUMENTS, r);
    return r;
  }

  // (expressionList)?
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    arguments_1_0(b, l + 1);
    return true;
  }

  // (expressionList)
  private static boolean arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expressionList(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // NEW createdName LBRACKET RBRACKET (LBRACKET RBRACKET)* arrayInitializer
  //                | NEW createdName LBRACKET expression RBRACKET (LBRACKET expression RBRACKET)* (LBRACKET RBRACKET)*
  //                | newArrayInitializer | newDictionaryInitializer
  //                | NEW LBRACKET INTLITERAL RBRACKET
  public static boolean arrayCreator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<array creator>");
    r = arrayCreator_0(b, l + 1);
    if (!r) r = arrayCreator_1(b, l + 1);
    if (!r) r = newArrayInitializer(b, l + 1);
    if (!r) r = newDictionaryInitializer(b, l + 1);
    if (!r) r = parseTokens(b, 0, NEW, LBRACKET, INTLITERAL, RBRACKET);
    exit_section_(b, l, m, ARRAY_CREATOR, r, false, null);
    return r;
  }

  // NEW createdName LBRACKET RBRACKET (LBRACKET RBRACKET)* arrayInitializer
  private static boolean arrayCreator_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEW);
    r = r && createdName(b, l + 1);
    r = r && consumeTokens(b, 0, LBRACKET, RBRACKET);
    r = r && arrayCreator_0_4(b, l + 1);
    r = r && arrayInitializer(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (LBRACKET RBRACKET)*
  private static boolean arrayCreator_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_0_4")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arrayCreator_0_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayCreator_0_4", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // LBRACKET RBRACKET
  private static boolean arrayCreator_0_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_0_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // NEW createdName LBRACKET expression RBRACKET (LBRACKET expression RBRACKET)* (LBRACKET RBRACKET)*
  private static boolean arrayCreator_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEW);
    r = r && createdName(b, l + 1);
    r = r && consumeToken(b, LBRACKET);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    r = r && arrayCreator_1_5(b, l + 1);
    r = r && arrayCreator_1_6(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (LBRACKET expression RBRACKET)*
  private static boolean arrayCreator_1_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_1_5")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arrayCreator_1_5_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayCreator_1_5", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // LBRACKET expression RBRACKET
  private static boolean arrayCreator_1_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_1_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // (LBRACKET RBRACKET)*
  private static boolean arrayCreator_1_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_1_6")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arrayCreator_1_6_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayCreator_1_6", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // LBRACKET RBRACKET
  private static boolean arrayCreator_1_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayCreator_1_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE (variableInitializer (COMMA variableInitializer)*)? (COMMA)? RBRACE
  public static boolean arrayInitializer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayInitializer")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && arrayInitializer_1(b, l + 1);
    r = r && arrayInitializer_2(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, ARRAY_INITIALIZER, r);
    return r;
  }

  // (variableInitializer (COMMA variableInitializer)*)?
  private static boolean arrayInitializer_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayInitializer_1")) return false;
    arrayInitializer_1_0(b, l + 1);
    return true;
  }

  // variableInitializer (COMMA variableInitializer)*
  private static boolean arrayInitializer_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayInitializer_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = variableInitializer(b, l + 1);
    r = r && arrayInitializer_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA variableInitializer)*
  private static boolean arrayInitializer_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayInitializer_1_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!arrayInitializer_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayInitializer_1_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA variableInitializer
  private static boolean arrayInitializer_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayInitializer_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && variableInitializer(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA)?
  private static boolean arrayInitializer_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayInitializer_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // EQ
  //                      | PLUSEQ
  //                      | SUBEQ
  //                      | STAREQ
  //                      | SLASHEQ
  //                      | AMPEQ
  //                      | BAREQ
  //                      | CARETEQ
  //                      | PERCENTEQ
  //                      | LT LT EQ
  //                      | GT GT GT EQ
  //                      | GT GT EQ
  public static boolean assignmentOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<assignment operator>");
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, PLUSEQ);
    if (!r) r = consumeToken(b, SUBEQ);
    if (!r) r = consumeToken(b, STAREQ);
    if (!r) r = consumeToken(b, SLASHEQ);
    if (!r) r = consumeToken(b, AMPEQ);
    if (!r) r = consumeToken(b, BAREQ);
    if (!r) r = consumeToken(b, CARETEQ);
    if (!r) r = consumeToken(b, PERCENTEQ);
    if (!r) r = parseTokens(b, 0, LT, LT, EQ);
    if (!r) r = parseTokens(b, 0, GT, GT, GT, EQ);
    if (!r) r = parseTokens(b, 0, GT, GT, EQ);
    exit_section_(b, l, m, ASSIGNMENT_OPERATOR, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACE (blockStatement)* RBRACE
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && block_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // (blockStatement)*
  private static boolean block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!block_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (blockStatement)
  private static boolean block_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = blockStatement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
